--- a/prepros.cfg
+++ b/prepros.cfg
@@ -209,22 +209,6 @@
           "parents": [],
           "type": "jade"
         },
-        "9779b492": {
-          "id": "9779b492",
-          "path": "js/test.js",
-          "output": "js/test-dist.js",
-          "name": "test.js",
-          "category": "JS",
-          "autoCompile": false,
-          "uglify": true,
-          "mangle": true,
-          "babel": false,
-          "sourceMaps": false,
-          "customOutput": false,
-          "imported": false,
-          "parents": [],
-          "type": "javascript"
-        },
         "30eac5fb": {
           "id": "30eac5fb",
           "path": "img/aics_logo_150.png",
@@ -731,6 +715,22 @@
           "optimized": false,
           "height": 0,
           "width": 0
+        },
+        "3c0ebca7": {
+          "id": "3c0ebca7",
+          "path": "js/headerBulletMenu__hide-show.js",
+          "output": "js/headerBulletMenu__hide-show-dist.js",
+          "name": "headerBulletMenu__hide-show.js",
+          "category": "JS",
+          "autoCompile": false,
+          "uglify": true,
+          "mangle": true,
+          "babel": false,
+          "sourceMaps": false,
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "javascript"
         }
       },
       "deploymentHistory": {},
