jQuery - four resize content back card

--- a/prepros.cfg
+++ b/prepros.cfg
@@ -731,6 +731,22 @@
           "imported": false,
           "parents": [],
           "type": "javascript"
+        },
+        "eaf3af17": {
+          "id": "eaf3af17",
+          "path": "js/fourBecomeContentBack__autoResize.js",
+          "output": "js/fourBecomeContentBack__autoResize-dist.js",
+          "name": "fourBecomeContentBack__autoResize.js",
+          "category": "JS",
+          "autoCompile": false,
+          "uglify": true,
+          "mangle": true,
+          "babel": false,
+          "sourceMaps": false,
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "javascript"
         }
       },
       "deploymentHistory": {},
